--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,44 @@
 body {
   min-height: 100vh;
+  display: grid;
+  grid-template-columns: 70% 30%;
+  grid-template-rows: 100px 1fr 100px;
+  grid-template-areas: 
+  "header header header"
+  "main main main"
+  "footer footer footer"
+}
+
+header {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  grid-area: header;
 }
 
 .container {
+  max-width: 80vw;
   display: grid;
   grid-template-columns: repeat(4,25%);
-  grid-template-rows: repeat(4,25%);
-}
-
-img {
-  width: 300px;
-  height: 300px;
 }
 
 figure {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
   border: 1px solid rgb(134, 132, 132);
 }
 
 ul {
   list-style-type: none;
+  padding-left: 0;
+  text-align: center;
 }
 
 main {
+  max-width: 100vw;
   display: flex;
   gap: 20px;
+  grid-area: main;
 }
 
 .container, aside {
@@ -33,8 +46,11 @@ main {
 }
 
 footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: rgb(209, 208, 208);
-  justify-self: flex-end;
+  grid-area: footer;
 }
 
 button {
