--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,8 @@ figure {
   flex-direction: column;
   align-items: stretch;
   border: 1px solid rgb(134, 132, 132);
+  padding: 15px;
+  gap: 10px;
 }
 
 ul {
