--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ figure {
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  border: 1px solid rgb(134, 132, 132);
+  border: 1px solid rgba(134, 132, 132, 0.342);
   padding: 15px;
   gap: 10px;
 }
@@ -53,6 +53,30 @@ footer {
   align-items: center;
   background-color: rgb(209, 208, 208);
   grid-area: footer;
+}
+
+.newButton {
+  height: 247px;
+}
+
+.newButton:hover {
+  transition: 0.2s ease;
+  background-color: rgb(172, 235, 164);
+  color: rgb(28, 97, 28);
+  text-overflow: hidden;
+}
+
+.popUp {
+  width: 400px;
+  top: 50%;
+  left: 50%;
+  background-color: rgba(7, 7, 95, 0.438);
+  position: absolute;
+}
+
+.fa-book-medical {
+  font-size: 40px;
+  padding: 50px;
 }
 
 button {
