--- a/styles.css
+++ b/styles.css
@@ -70,8 +70,9 @@ footer {
   width: 400px;
   top: 50%;
   left: 50%;
-  background-color: rgba(7, 7, 95, 0.438);
+  background-color:white;
   position: absolute;
+  /* visibility: hidden; */
 }
 
 .fa-book-medical {
