--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
 body {
   min-height: 100vh;
+  background-color: rgb(22, 22, 22);
+  color: white;
+  font-family: 'Roboto', sans-serif;
   display: grid;
   grid-template-columns: 70% 30%;
   grid-template-rows: 100px 1fr 100px;
@@ -21,6 +24,10 @@ header {
   grid-template-columns: repeat(4,25%);
 }
 
+figure img {
+  height: 250px;
+}
+
 figure {
   display: flex;
   flex-direction: column;
@@ -39,24 +46,28 @@ ul {
 main {
   max-width: 100vw;
   display: flex;
+  justify-content: space-around;
   gap: 20px;
   grid-area: main;
-}
-
-.container, aside {
-  border: 2px solid rgb(133, 196, 133);
 }
 
 footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(209, 208, 208);
+  background-color: rgb(58, 57, 57);
   grid-area: footer;
 }
-
+button {
+  padding: 15px;
+  border-radius: 15px;
+  border: none;
+  background-color: rgb(117, 117, 202);
+  color: white;
+  font-weight: bold;
+}
 .newButton {
-  height: 247px;
+  height: 250px;
 }
 
 .newButton:hover {
@@ -67,13 +78,61 @@ footer {
 }
 
 .popUp {
-  width: 400px;
-  top: 50%;
-  left: 50%;
-  background-color:white;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+
+  width: 700px;
+  height: 550px;
   position: absolute;
+  background-color: rgb(0, 0, 26);
+  border-radius: 15px;
+  padding-bottom: 80px;
   /* visibility: hidden; */
 }
+
+.input {
+  font-size: 16px;
+  letter-spacing: 1.5px;
+  font-style: italic;
+  color: rgb(212, 212, 212);
+}
+
+input[type="file"] {
+  border: 0.5px solid white;
+  border-radius: 10px;
+}
+
+legend {
+  font-size: 35px;
+  font-weight: bold;
+}
+
+.fa-xmark {
+  align-self: flex-end;
+  margin: 20px 20px 5px 5px;
+  padding: 0;
+  background: none;
+	border: none;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
+}
+
+form .book_details{
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+} 
 
 .fa-book-medical {
   font-size: 40px;
@@ -84,10 +143,27 @@ button {
   font-size: 16px;
 }
 
+aside {
+  justify-self: flex-end;
+}
+
 .sidebar {
   display: flex;
   flex-direction: column;
   justify-content: stretch;
   padding: 20px 80px 40px 80px;
   gap: 15px;
+}
+
+.title {
+  font-weight: 600;
+  font-size: 24px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.author, .status_display {
+  font-style: italic;
+  color: rgb(212, 212, 212);
 }
