--- a/styles.css
+++ b/styles.css
@@ -83,13 +83,17 @@ button {
   align-items: center;
   justify-content: space-between;
 
-  width: 700px;
+  width: 650px;
   height: 550px;
   position: absolute;
   background-color: rgb(0, 0, 26);
   border-radius: 15px;
   padding-bottom: 80px;
-  /* visibility: hidden; */
+  visibility: hidden;
+}
+
+.popUp.active {
+  visibility: visible;
 }
 
 .input {
@@ -141,6 +145,7 @@ form .book_details{
 
 button {
   font-size: 16px;
+  cursor: pointer;
 }
 
 aside {
