--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,7 @@ button {
 input[type="file"] {
   border: 0.5px solid white;
   border-radius: 10px;
+  width: 300px;
 }
 
 input[type="number"] {
