--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@ body {
   color: white;
   font-family: 'Roboto', sans-serif;
   display: grid;
-  grid-template-columns: 70% 30%;
   grid-template-rows: 100px 1fr 100px;
   grid-template-areas: 
   "header header header"
@@ -21,7 +20,8 @@ header {
 .container {
   max-width: 80vw;
   display: grid;
-  grid-template-columns: repeat(4,25%);
+  grid-template-columns: repeat(4, 300px);
+  grid-template-rows: repeat(auto-fill, 1fr);
 }
 
 figure img {
