--- a/styles.css
+++ b/styles.css
@@ -20,8 +20,10 @@ header {
 .container {
   max-width: 80vw;
   display: grid;
+  gap: 35px;
   grid-template-columns: repeat(4, 300px);
   grid-template-rows: repeat(auto-fill, 1fr);
+  padding-bottom: 100px;
 }
 
 figure img {
@@ -32,6 +34,7 @@ figure {
   display: flex;
   flex-direction: column;
   align-items: stretch;
+  height: fit-content;
   border: 1px solid rgba(80, 79, 79, 0.342);
   border-radius: 5px;
   padding: 15px;
@@ -68,10 +71,10 @@ button {
   font-weight: bold;
 }
 .newButton {
-  height: 250px;
+  height: 380px;
 }
 
-.newButton:hover {
+.newButtonFig:hover, .newButtonFig:hover > .newButton {
   transition: 0.2s ease;
   background-color: rgb(172, 235, 164);
   color: rgb(28, 97, 28);
@@ -186,5 +189,14 @@ aside {
 }
 
 .newButtonFig {
+  background-color: rgb(117, 117, 202);
+  border-radius: 15px;
+  align-self: center;
   border: none;
+}
+
+.buttonContainer {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
 }
