--- a/styles.css
+++ b/styles.css
@@ -200,3 +200,9 @@ aside {
   justify-content: center;
   gap: 30px;
 }
+
+.fa-pen-to-square:hover {
+  transition: 0.2s ease;
+  background-color: rgb(54, 26, 216);
+  color: rgb(11, 9, 105);
+}
