--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,11 @@ button {
   visibility: visible;
 }
 
+#editForm {
+  width:300px;
+  height:400px;
+}
+
 .input {
   font-size: 16px;
   letter-spacing: 1.5px;
