--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,27 @@
-body {
+  body {
   min-height: 100vh;
+  width: 100%;
   background-color: rgb(22, 22, 22);
   color: white;
   font-family: 'Roboto', sans-serif;
   display: grid;
-  grid-template-rows: 100px 1fr 100px;
+  grid-template-rows: 175px 1fr 100px;
   grid-template-areas: 
   "header header header"
   "main main main"
   "footer footer footer";
+  margin: 0;
 }
 
 header {
   display: flex;
   justify-content: center;
+  align-items: center;
   grid-area: header;
+  font-family: 'Qwigley', cursive;
+  font-size: 45px;
+  box-shadow: 0px 3px 10px 1px rgba(0, 0, 0, 0.49);
+  background-color: rgb(17, 17, 17);
 }
 
 .container {
@@ -35,7 +42,7 @@ figure {
   flex-direction: column;
   align-items: stretch;
   height: fit-content;
-  border: 1px solid rgba(80, 79, 79, 0.342);
+  border: 1px solid rgb(43, 43, 73);
   border-radius: 5px;
   padding: 15px;
   gap: 10px;
@@ -48,6 +55,7 @@ ul {
 }
 
 main {
+  padding-top: 100px;
   max-width: 100vw;
   display: flex;
   justify-content: space-around;
@@ -59,9 +67,11 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(58, 57, 57);
+  gap: 15px;
   grid-area: footer;
+  font-size: 20px;
 }
+
 button {
   padding: 15px;
   border-radius: 15px;
@@ -210,4 +220,8 @@ aside {
   transition: 0.2s ease;
   background-color: rgb(54, 26, 216);
   color: rgb(11, 9, 105);
+}
+
+.fa-github {
+  font-size: 40px;
 }
