--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,15 @@
-  body {
+body {
   min-height: 100vh;
   width: 100%;
   background-color: rgb(22, 22, 22);
   color: white;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   display: grid;
   grid-template-rows: 175px 1fr 100px;
-  grid-template-areas: 
-  "header header header"
-  "main main main"
-  "footer footer footer";
+  grid-template-areas:
+    "header header header"
+    "main main main"
+    "footer footer footer";
   margin: 0;
 }
 
@@ -18,7 +18,7 @@ header {
   justify-content: center;
   align-items: center;
   grid-area: header;
-  font-family: 'Qwigley', cursive;
+  font-family: "Qwigley", cursive;
   font-size: 45px;
   box-shadow: 0px 3px 10px 1px rgba(0, 0, 0, 0.49);
   background-color: rgb(17, 17, 17);
@@ -84,7 +84,8 @@ button {
   height: 380px;
 }
 
-.newButtonFig:hover, .newButtonFig:hover > .newButton {
+.newButtonFig:hover,
+.newButtonFig:hover > .newButton {
   transition: 0.2s ease;
   background-color: rgb(172, 235, 164);
   color: rgb(28, 97, 28);
@@ -92,7 +93,7 @@ button {
 }
 
 .popUp {
-  display:flex;
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
@@ -111,8 +112,8 @@ button {
 }
 
 #editForm {
-  width:300px;
-  height:400px;
+  width: 300px;
+  height: 400px;
 }
 
 .input {
@@ -142,10 +143,10 @@ legend {
   margin: 20px 20px 5px 5px;
   padding: 0;
   background: none;
-	border: none;
-	font: inherit;
-	cursor: pointer;
-	outline: inherit;
+  border: none;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
 }
 
 form {
@@ -156,11 +157,11 @@ form {
   gap: 50px;
 }
 
-form .book_details{
+form .book_details {
   display: flex;
   flex-direction: column;
   gap: 30px;
-} 
+}
 
 .fa-book-medical {
   font-size: 40px;
@@ -188,7 +189,8 @@ button {
   overflow: hidden;
 }
 
-.author, .status_display {
+.author,
+.status_display {
   font-style: italic;
   color: rgb(212, 212, 212);
 }
