--- a/styles.css
+++ b/styles.css
@@ -133,6 +133,10 @@ input[type="number"] {
   width: 50px;
 }
 
+.invalid {
+  border: 2px solid red;
+}
+
 legend {
   font-size: 35px;
   font-weight: bold;
